# spreadsheet

./: .gitignore  Cargo.toml  LICENSE.txt  README.adoc  build.rs
3rd_party_bin/: README.adoc  start_grpc_web_proxy.sh
client/: package-lock.json  package.json
client/src/: index.css
info/: README.adoc  early_thinking.adoc  formulas.adoc
julia/: README.md
julia/MesaX/: Project.toml
julia/MesaX/.devcontainer/: devcontainer.json
julia/MesaX/src/: MesaX.jl  parser.jl  structs.jl
mesa-client/: .gitignore  README.md  package-lock.json  package.json
mesa-client/src/: App.tsx
mesa_xs/: .gitignore  README.adoc  build.sbt
mesa_xs/src/main/scala/: Main.scala
mesa_xs/src/main/scala/mesax/base/: Base.scala  Type.scala  Value.scala
mesa_xs/src/main/scala/mesax/model/: BaseModel.scala  Cell.scala
mesa_xs/src/main/scala/mesax/parsing/: Parser.scala
mesa_xs/src/test/scala/mesax/parsing/: ParseTest.scala
node/: .gitignore  README.md  client.js  envoy.yaml  node-client.js  package.json  server.js
proto/: hello_world.proto  mesax.proto
src/: .main.rs.swp  compute.rs  definitions.rs  eval.rs  eval_stack.rs  lib.rs  main.rs  parser.rs  parser_util.rs  util.rs  workbook.rs  worksheet.rs
src/helloworld/: client.rs  server.rs
tests/: integration_tests.rs  test.rs  util_test.rs  workbook_tests.rs
