[package]
authors = ["David Pollak <feeder.of.the.bears@gmail.com>"]
edition = "2018"
homepage = "https://mesa-x.org/"
license = "Apache-2.0"
name = "mesax"
repository = "https://github.com/mesa-x/spreadsheet"
version = "0.1.0"

[[bin]]
name = "helloworld-client"
path = "src/helloworld/client.rs"

[[bin]]
name = "helloworld-server"
path = "src/helloworld/server.rs"

[dependencies]
arc-swap = "~1"
async-stream = "~0.3"
async-timer = "~0.7"
atomic-counter = "~1"
im = {version = "~15", features = ["proptest", "serde"]}
lazy_static = "~1.4"
nom = "~6"
nom_locate = "~3"
lexical-core = "0.7.6"
prost = "~0.8"
rand = "~0.8"
serde = "~1"
tokio = {version = "~1.8", features = ["full"]}
tokio-stream = "~0.1"
tonic = {version = "~0.5", features = ["tls"]}

[build-dependencies]
tonic-build = {version = "~0.5", features = ["prost"]}
